# merger-collaborative-3d-modeling-software

./: CMakeLists.txt  README.md  team_charter.md
shader/: default.frag  default.vert  grid.frag  grid.vert  id_picking.frag  id_picking.vert  solid_color.frag  vertex_view.frag  vertex_view.vert
src/merger/: client.cpp  glad.c  lock_queue.h  main.cpp  merger.h  merger_app.cpp  merger_gui.cpp  merger_types.h  mesh_loader.cpp  network.h  render.cpp  render.h  scene.cpp  scene.h  scene_serialization.cpp  scene_serialization.h  server.cpp  signaling_server.cpp
